--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.0.1",
-    "nuxt": "3.0.0-rc.12",
-    "nuxt-icon": "^0.1.7"
+    "nuxt": "^3.9.0"
+  },
+  "dependencies": {
+    "@nuxtjs/tailwindcss": "^6",
+    "nuxt-icon": "^0.6.7"
   }
 }
